# visitorpattern

./: CMakeLists.txt  Floor.hpp  Trunc.hpp  VectorContainer.hpp  abs.hpp  add.hpp  base.hpp  ceil.hpp  container.hpp  decorator.hpp  div.hpp  factory.cpp  factory.hpp  iterator.hpp  main.cpp  mult.hpp  op.hpp  paren.hpp  pow.hpp  rand.hpp  sub.hpp  unit_test.cpp  visitor.hpp
